actualización el ajente remoto de Jenkins

--- a/jenkins/centos7/Dockerfile
+++ b/jenkins/centos7/Dockerfile
@@ -5,7 +5,10 @@ RUN yum -y install openssh-server
 RUN useradd remote_user && \
     echo "1234" | passwd remote_user  --stdin && \
     mkdir /home/remote_user/.ssh && \
-    chmod 700 /home/remote_user/.ssh
+    chmod 700 /home/remote_user/.ssh && \
+    mkdir /var/jenkins/ && \
+    chown remote_user:remote_user /var/jenkins
+
 
 COPY remote-key.pub /home/remote_user/.ssh/authorized_keys
 
@@ -18,6 +21,7 @@ RUN yum -y install mysql
 
 RUN yum -y install epel-release && \
     yum -y install python3-pip && \
+    yum -y install java-1.8.0-openjdk && \
     pip3 install --upgrade pip && \
     pip3 install awscli
 
