--- a/jenkins/centos7/Dockerfile-Ubuntu
+++ b/jenkins/centos7/Dockerfile-Ubuntu
@@ -1,13 +1,16 @@
 FROM ubuntu:18.04
 
 RUN apt-get update && \
- apt-get install -y openssh-server
+ apt-get install -y openssh-server && \
+ apt-get install -y openjdk-8-jdk 
 
 RUN useradd remote_user && \
     echo "remote_user:1234" | chpasswd && \
     mkdir /home/remote_user/.ssh -p && \
     chmod 700 /home/remote_user/.ssh && \
-    mkdir -p -m0755 /var/run/sshd
+    mkdir -p -m0755 /var/run/sshd && \
+    mkdir /var/jenkins/ && \
+    chown remote_user:remote_user /var/jenkins
 
 COPY remote-key.pub /home/remote_user/.ssh/authorized_keys
 
